--- a/happyRoadProject/src/main/webapp/resources/css/searchresult.css
+++ b/happyRoadProject/src/main/webapp/resources/css/searchresult.css
@@ -5,7 +5,7 @@
 
 #search-content{
     width: 800px;
-    height: 50px;
+    height: 200px;
     
     display: flex;
     align-items: center;
@@ -39,12 +39,13 @@
     margin: 0 0 0 0;
     padding-left: 0px;
 }
-#btn-order{
+#btn-order-placeNo{
     border-radius: 20px;
 }
 
 .serach-result-all{
     width: 800px;
+    height: 100px;
     margin: 0 auto;
 }
 
