--- a/happyRoadProject/src/main/webapp/resources/css/searchresult.css
+++ b/happyRoadProject/src/main/webapp/resources/css/searchresult.css
@@ -39,13 +39,12 @@
     margin: 0 0 0 0;
     padding-left: 0px;
 }
-#btn-order-placeNo{
+#btn-order-placeNo, #btn-order-placeCount{
     border-radius: 20px;
 }
 
 .serach-result-all{
     width: 800px;
-    height: 100px;
     margin: 0 auto;
 }
 
